[package]
name = "your_miyajestys_yoga"
version = "0.4.0"
authors = ["Perfspec <lewisrwebb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"